# musicdownloader

./: .gitignore  README.md  default.nix  musicdownloader.cabal
app/: .Main.hs.swp  Main.hs
src/: .Downloader.hs.swp  Downloader.hs
